package com.example.casopractico2.service.interfaces;

public interface AlertListener {
    void alertReceived(String message);
}
