package com.example.casopractico2.service.interfaces;

public interface DataProcessor {
    void process();
    boolean validate();
    void postProcess();
}
